# dobonomodo

./: .dockerignore  .gitignore  Cargo.toml  Dataset.md  DobONoMoDo.md  IMPLEMENTATION_REPORT.md  README.md
crates/cli/: Cargo.toml
crates/cli/src/: main.rs
crates/cli/src/commands/: mod.rs  test.rs
crates/cli/src/harness/: comparator.rs  executor.rs  mod.rs  parser.rs  reporter.rs
crates/core/: Cargo.toml
crates/core/benches/: append_benchmarks.rs  dsl_benchmarks.rs  resolver_bench.rs
crates/core/src/: error.rs  lib.rs
crates/core/src/dsl/: aggregation.rs  ast.rs  compiler.rs  context.rs  error.rs  expression.rs  grammar.pest  interpolation.rs  mod.rs  parser.rs  types.rs  validation.rs
crates/core/src/engine/: aggregation.rs  append.rs  error.rs  executor.rs  filter.rs  io_traits.rs  join.rs  mod.rs  period_filter.rs  temporal.rs  types.rs  update.rs
crates/core/src/engine/ops/: aggregate.rs  mod.rs  output.rs  update.rs
crates/core/src/execution/: pipeline.rs
crates/core/src/model/: calendar.rs  dataset.rs  datasource.rs  expression.rs  metadata_store.rs  mod.rs  operation.rs  period.rs  project.rs  resolver.rs  run.rs  test_scenario.rs
crates/core/src/operations/: delete.rs  mod.rs  output.rs
crates/core/src/resolver/: calendar_matcher.rs  context.rs  diagnostics.rs  engine.rs  expander.rs  matcher.rs  mod.rs  renderer.rs
crates/core/src/trace/: mod.rs  trace_writer.rs  types.rs
crates/core/src/validation/: mod.rs
crates/core/tests/: aggregate_execution.rs  append_test_suite.rs  delete_benchmarks.rs  delete_integration.rs  delete_validation.rs  deserialize_json.rs  deserialize_json_contract.rs  deserialize_yaml.rs  dsl_compiler_tests.rs  dsl_integration_tests.rs  dsl_parser_tests.rs  dsl_validation_tests.rs  engine_filter_test.rs  engine_join_tests.rs  enum_contracts.rs  foundation_compile.rs  integration_output_test.rs  io_traits_compile.rs  output_benchmarks.rs  output_unit.rs  period_filter_tests.rs  quickstart_fixture_flow.rs  repro_wildcard.rs  repro_wildcard_append.rs  resolver_engine_contract.rs  resolver_us1_first_match.rs  resolver_us2_period_expansion.rs  resolver_us3_diagnostics.rs  runtime_join_contract.rs  runtime_join_contracts.rs  runtime_join_integration.rs  runtime_join_unit.rs  ts07_column_projection.rs  unit_output_op_test.rs  update_operation_scenarios.rs  us009_append_test_suite.rs  us1_aggregate_basic.rs  us1_aggregate_contract.rs  us1_aggregate_execution.rs  us1_workspace_structure.rs  (+6 more)
crates/core/tests/benchmarks/: output_benchmarks.rs
crates/core/tests/common/: mod.rs
crates/core/tests/contract/: ts07_column_projection.rs
crates/core/tests/contracts/: aggregate_contract.rs  entity_deserialize_contract.rs  io_contracts.rs  runtime_join_contract.rs  us009_append_operation_contract_test.rs  us1_scaffold_validate_contract.rs
crates/core/tests/fixtures/: entities.json  entities.yaml  in_memory_metadata_store.rs  sample_datasets.rs
crates/core/tests/fixtures/calendars/: fiscal_calendar.yaml
crates/core/tests/integration/: aggregate_edge_cases_test.rs  aggregate_execution_test.rs  append_temporal_filtering_test.rs  bitemporal_filtering_tests.rs  expression_integration_tests.rs  multi_join_tests.rs  resolver_precedence_tests.rs  runtime_join_update_executor_tests.rs  test_pipeline_with_delete.rs  ts03_fx_conversion.rs  us009_append_scenarios_test.rs  us009_edge_cases_test.rs
crates/core/tests/unit/: aggregate_basic_test.rs  dsl_aggregation_test.rs  dsl_expression_test.rs  engine_aggregation_test.rs  engine_join_tests.rs  engine_temporal_test.rs  expression_compiler_tests.rs  mod.rs  period_filter_tests.rs  test_expander.rs  test_matcher.rs  test_renderer.rs  update_operation_test.rs
crates/test-resolver/: Cargo.toml
crates/test-resolver/src/: errors.rs  injection.rs  lib.rs  loader.rs  metadata.rs  trace.rs
crates/test-resolver/tests/: delete_operation_scenarios.rs
crates/test-resolver/tests/scenarios/: delete_all.yaml  delete_output_visibility.yaml  delete_selective.yaml
(+218 files in other folders)
