[package]
name = "cli"
version.workspace = true
edition.workspace = true

[dependencies]
dobo-core = { path = "../core" }
test-resolver = { path = "../test-resolver" }
anyhow.workspace = true
clap = { version = "4", features = ["derive"] }
polars.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
serde_path_to_error = "0.1"
chrono.workspace = true
uuid.workspace = true
walkdir = "2"

[dev-dependencies]
chrono.workspace = true
tempfile = "3"
uuid.workspace = true
