[package]
name = "dobo-core"
version.workspace = true
edition.workspace = true

[dependencies]
chrono.workspace = true
lazy_static.workspace = true
pest.workspace = true
pest_derive.workspace = true
polars.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
thiserror.workspace = true
uuid.workspace = true

[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "dsl_benchmarks"
harness = false
