[package]
name = "test-resolver"
version.workspace = true
edition.workspace = true

[dependencies]
dobo-core = { path = "../core" }

[dev-dependencies]
anyhow.workspace = true
polars.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
uuid.workspace = true
