[package]
name = "test-resolver"
version.workspace = true
edition.workspace = true

[dependencies]
dobo-core = { path = "../core" }
anyhow.workspace = true
chrono.workspace = true
polars.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
uuid.workspace = true
[dev-dependencies]
tempfile = "3"
